<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/buttonHomeTodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openTodos"
            android:text="@string/todos" />

        <Button
            android:id="@+id/buttonHomeTransportation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openTransportation"
            android:text="@string/transportation" />

        <Button
            android:id="@+id/buttonHomeWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openWeather"
            android:text="@string/weather" />

        <Button
            android:id="@+id/buttonHomeNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openNews"
            android:text="@string/news" />

        <Button
            android:id="@+id/buttonHomeBreakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openBreakfast"
            android:text="@string/breakfast" />

        <Button
            android:id="@+id/buttonHomeStar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openStar"
            android:text="@string/constellation" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>